Fix details expanded state not announced on iOS For some reason, setting `display: inline-block` on the summary means that VoiceOver on iOS no longer announces the expanded state of the `<details>` element [1].
We were using `display: inline-block` so that the interactive area and the focus state (when visible) were constrained to the text within the `<summary>`.

We can achieve the same thing by using `display: block` with `width: fit-content`.

[1]: https://bugs.webkit.org/show_bug.cgi?id=230408

https://github.com/alphagov/govuk-frontend/commit/00371fa1e36aca169b9e8a8488f3f8310ed10349

--- a/src/nhsuk/components/details/_index.scss
+++ b/src/nhsuk/components/details/_index.scss
@@ -25,7 +25,7 @@
 }
 
 .nhsuk-details__summary {
-  display: inline-block; // [2]
+  display: block;
 }
 
 .nhsuk-details__text {
@@ -62,6 +62,7 @@
     cursor: pointer;
     padding-left: nhsuk-spacing(4);
     position: relative; // [3]
+    width: fit-content; // [2]
 
     &:hover {
       color: $nhsuk-link-hover-color;
@@ -135,6 +136,7 @@ $expander-border-hover-color: $color_nhsuk-grey-3;
     border-top: $nhsuk-focus-width solid transparent;
     display: block;
     padding: nhsuk-spacing(4) - $nhsuk-focus-width nhsuk-spacing(4) 0;
+    width: auto; // [2]
 
     @include nhsuk-media-query($from: tablet) {
       padding: nhsuk-spacing(5) - $nhsuk-focus-width nhsuk-spacing(5) 0;
